# dlt-source-affinity

./: .gitignore  .typos.toml  README.md  __init__.py  affinity_pipeline.py  devenv.nix  pyproject.toml  setup.py
.dlt/: config.toml
.github/workflows/: test.yml
affinity/: README.md  __init__.py  rest_client.py  settings.py
affinity/model/: __init__.py  generate_model.sh
dlt_source_affinity/: __init__.py  rest_client.py  type_adapters.py
dlt_source_affinity/model/: .gitattributes  README.md  __init__.py  generate_model.sh  interactions.py  notes.py  v2_spec.json  v2_spec_patches.diff
dlt_source_affinity/tests/: test_pipe.py
