[project]
name = "dlt-source-affinity"
version = "0.1.0"
description = "A DLT source for the Affinity CRM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt>=1.4.1",
]
dynamic = ["authors", "classifiers"]

[project.optional-dependencies]
show = [
    "duckdb>=1.1.3",
    "streamlit>=1.41.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.26.4",
]

[tool.black]
include = '.*py$'
