[project]
name = "dlt-source-affinity"
version = "0.1.0"
description = "A DLT source for the Affinity CRM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt>=1.5.0",
    "pydantic-flatten-rootmodel>=0.1.2",
]
dynamic = ["authors", "classifiers"]

[project.optional-dependencies]
show = [
    "dlt[duckdb]>=1.5.0",
    "streamlit>=1.41.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.26.4",
    "pytest>=8.3.4",
]

[tool.black]
include = '.*py$'
